# finlib

./: .gitignore  dune-project  finlib.opam
lib/: .ocamlinit  action.ml  bar.ml  calendar.ml  combo.ml  dune  futures.ml  instrument.ml  market_phase.ml  option.ml  option_chain.ml  option_contract.ml  option_desc.ml  option_right.ml  option_spread.ml  option_strategy.ml  price.ml  quote.ml  spread.ml  strike_and_right.ml  symbol.ml  tick.ml  volume.ml
test/: dune
