(lang dune 3.19)
(name finlib)
(generate_opam_files true)
(source (github username/reponame))

(authors "Eric Finster <ericfinster@gmail.com>")
(maintainers "Eric Finster <ericfinster@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name finlib)
 (synopsis "A basic finance library")
 (description "A longer description")
 (depends ocaml)
 (tags ("add topics" "to describe" your project)))


